src/main/resources/static/css/main.css
/*font-family: 'Quando', serif;*/
/*
    Table of contents:
    1. Common styles
    2. Navbar
    3. Load animation
*/
/* --- 1. Common Styles --- */
*{
    padding:0;
    margin:0;
    box-sizing: border-box;
}
body{
    width: 100%;
    height: 100vh;
    /*background-color: #222631;*/
}
/* --- 2. Navbar --- */
.navbar{
    background: #383A47 !important;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

#navLogo{
    width: 229px;
    height: 46px;
    left: 58px;
    top: 7px;
}

.navbar-light .navbar-toggler{
    color: #AAC6FC !important;
    border: #AAC6FC;
}

.collapse:not(.show){
    display: none;
}

.links{
    font-family: 'Quando', serif;    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 22px;
    color: #AAC6FC !important;

}

.links:hover{
    text-decoration: underline;
}

.login{
    font-family: 'Quando', serif;    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 22px;

    color: #E0719E;
    background: #F3F6E6;
    border: 1px solid #E0719E;
    box-sizing: border-box;
    border-radius: 6px;
}

.login:hover{
    color: #F3F6E6;
    background: #E0719E;
    border: 1px solid #E0719E;

}

.register{
    font-family: 'Quando', serif;    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 22px;

    color: #F3F6E6;
    background: #E0719E;
    border-radius: 6px;
    border: 1px solid #E0719E;
}

.register:hover{
    color: #AAC6FC;
    background: #E0719E;
    border: 1px solid #AAC6FC;

}


/* --- 3. Load animation --- */
#logo{
    position: absolute;
    top:50%;
    left:50%;
    transform: translate(-50%,-50%);
}
.yum_0{
    stroke-dasharray: 3713px;
    stroke-dashoffset: 3714px;
    animation: yum_draw_0 3100ms ease-in-out 0ms infinite;
}
.yum_1{
    stroke-dasharray: 3713px;
    stroke-dashoffset: 3714px;
    animation: yum_draw_1 3100ms ease-in-out 0ms infinite;
}
.yum_2{
    stroke-dasharray: 3713px;
    stroke-dashoffset: 3714px;
    animation: yum_draw_2 3100ms ease-in-out 0ms infinite;
}
@keyframes yum_draw {100%{stroke-dashoffset: 0;}}
@keyframes yum_fade {0%{stroke-opacity: 1;}
    96.7741935483871%{stroke-opacity:1;}
    100%{stroke-opacity:0;}
}
@keyframes yum_draw_0 {
    0%{stroke-dashoffset: 3714}
    96.7741935483871%{ stroke-dashoffset: 0;}
    100%{ stroke-dashoffset: 0;}
}
@keyframes yum_draw_1 {
    0%{stroke-dashoffset: 3714}
    96.7741935483871%{ stroke-dashoffset: 0;}
    100%{ stroke-dashoffset: 0;}
}
@keyframes yum_draw_2 {
    0%{stroke-dashoffset: 3714}
    96.7741935483871%{ stroke-dashoffset: 0;}
    100%{ stroke-dashoffset: 0;}
}


/* --- 4. Jumbotron --- */

.homeJumbo{
    background: #AAC6FC;
    width: 100%;
    margin: 0;
    text-align:center;
}

.fryFriend{

    width: 818px;
    height: 457px;
    text-align:center;
}

